# OpenCV4AndroidWithCmake

./: .gitignore  README.md  import-summary.txt  settings.gradle
OpenCVLibrary310/: build.gradle
OpenCVLibrary310/src/main/: AndroidManifest.xml
OpenCVLibrary310/src/main/java/org/opencv/android/: CameraBridgeViewBase.java  JavaCameraView.java
OpenCVLibrary320/: build.gradle
OpenCVLibrary320/src/main/java/org/opencv/android/: JavaCameraView.java
OpenCVLibrary340/: build.gradle
app/: CMakeLists.txt  build.gradle
app/release/: output.json
app/src/androidTest/java/com/martin/ads/testopencv/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/martin/ads/testopencv/: HomeActivity.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/martin/ads/testopencv/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
